--- a/Burpple/app/src/main/res/drawable/margin_text.xml
+++ b/Burpple/app/src/main/res/drawable/margin_text.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <stroke
         android:width="3dp"
-        android:color="#e23c5b"></stroke>
+        android:color="#45c9ed"></stroke>
 
 </shape>
