--- a/Burpple/app/src/main/res/layout/activity_main.xml
+++ b/Burpple/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="256dp"
+            android:layout_height="300dp"
             android:fitsSystemWindows="true"
             app:contentScrim="@color/primary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -35,10 +35,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="24dp"
                     android:text="burpple"
                     android:textColor="#fff"
-                    android:textSize="30dp"
+                    android:textSize="37dp"
                     android:textStyle="bold" />
 
                 <EditText
@@ -48,7 +48,7 @@
                     android:layout_below="@+id/tv_title"
                     android:layout_centerHorizontal="true"
                     android:layout_margin="8dp"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginTop="12dp"
                     android:background="@drawable/rounded"
                     android:drawableLeft="@drawable/ic_search_grey_24dp"
                     android:drawablePadding="16dp"
@@ -120,9 +120,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_promotions"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="16dp"></android.support.v7.widget.RecyclerView>
+                android:layout_marginTop="16dp"
+                android:padding="8dp"></android.support.v7.widget.RecyclerView>
 
             <TextView
                 android:id="@+id/tv_latest_for_burpple"
