--- a/Burpple/app/src/main/res/layout/item_burpple_guides.xml
+++ b/Burpple/app/src/main/res/layout/item_burpple_guides.xml
@@ -1,46 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="180dp"
+    android:layout_height="160dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginTop="16dp">
 
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="180dp"
+        android:layout_height="160dp">
 
-        <ImageView
-            android:id="@+id/iv_food_burpple"
-            android:layout_width="180dp"
-            android:layout_height="160dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/food_bb_guides" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_bbg_small"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/hastoler_regular"
-            android:text="Best Pork Stick In"
-            android:textAppearance="@style/text_style"
-            android:textColor="#ffffff"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/iv_food_burpple"
+                android:layout_width="180dp"
+                android:layout_height="160dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/food_bb_guides" />
 
-        <TextView
-            android:id="@+id/tv_bbg_big"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/hastoler_regular"
-            android:text="CHINATOWN"
-            android:textAppearance="@style/text_style"
-            android:textColor="#ffffff"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_bbg_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:fontFamily="@font/hastoler_regular"
+                android:maxLines="2"
+                android:text="Best Pork Stick In"
+                android:textAppearance="@style/text_style"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 </android.support.design.widget.CoordinatorLayout>
