--- a/Burpple/app/src/main/res/layout/item_promotions.xml
+++ b/Burpple/app/src/main/res/layout/item_promotions.xml
@@ -1,108 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginTop="16dp">
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="175dp"
+    android:layout_height="230dp"
+    android:layout_marginLeft="12dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_food_promotion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="4dp">
 
-        <RelativeLayout
+    <RelativeLayout
+        android:id="@+id/rl_promotion_top"
+        android:layout_width="match_parent"
+        android:layout_height="170dp">
+
+        <ImageView
+            android:id="@+id/iv_food_promotions"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="170dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/food_for_promo" />
 
-            <RelativeLayout
-                android:id="@+id/rl_relative_layout"
-                android:layout_width="175dp"
-                android:layout_height="170dp"
-                android:layout_alignEnd="@+id/rl_layout"
-                android:layout_alignParentTop="true"
-                android:background="@drawable/food_for_promo">
+        <TextView
+            android:id="@+id/tv_burpple"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="44dp"
+            android:background="@drawable/rounded_amber"
+            android:padding="4dp"
+            android:text="@string/burpple_exclusive"
+            android:textColor="#fff"
+            android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_burpple"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="50dp"
-                    android:background="@drawable/rounded_amber"
-                    android:padding="4dp"
-                    android:text="@string/burpple_exclusive"
-                    android:textStyle="bold"
-                    android:textColor="#fff" />
-
-                <TextView
-                    android:id="@+id/tv_1for1"
-                    style="@style/text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_burpple"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginTop="4dp"
-                    android:textStyle="bold"
-                    android:textAppearance="@style/text_style"
-                    android:text="1-for-1 Big Burger"
-                    android:textSize="20sp" />
+        <TextView
+            android:id="@+id/tv_1for1"
+            style="@style/text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/v_view"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="4dp"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:text="1-for-1 Big Burger"
+            android:textAppearance="@style/text_style"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
 
-                <View
-                    android:id="@+id/v_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_below="@id/tv_1for1"
-                    android:layout_margin="4dp"
-                    android:layout_marginTop="20dp"
-                    android:background="#bdbdbd"></View>
+        <View
+            android:id="@+id/v_view"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_above="@id/tv_date"
+            android:layout_marginLeft="6dp"
+            android:layout_marginRight="6dp"
+            android:background="#e1d9d9"></View>
 
-                <TextView
-                    android:id="@+id/tv_date"
-                    style="@style/text_style"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/v_view"
-                    android:layout_marginLeft="16dp"
-                    android:text="TILL 31ST May'9"
-                    android:textStyle="bold"
-                    android:textSize="12sp" />
-            </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_date"
+            style="@style/text_style"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="6dp"
+            android:text="TILL 31ST May'9"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
 
 
-            <RelativeLayout
-                android:id="@+id/rl_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/rl_relative_layout"
-                android:background="#ffc107">
+    <RelativeLayout
+        android:id="@+id/rl_promotion_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="170dp"
+        android:background="#ffc107">
 
-                <TextView
-                    android:id="@+id/tv_food_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"
-                    android:text="@string/promotion_lower_text"
-                    android:textStyle="bold"
-                    android:textColor="#fff" />
+        <TextView
+            android:id="@+id/tv_food_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="@string/promotion_lower_text"
+            android:textColor="#fff"
+            android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_seller"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_food_name"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:text="Kent Ridge"
-                    android:textColor="#fff" />
-            </RelativeLayout>
+        <TextView
+            android:id="@+id/tv_seller"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_food_name"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:text="Kent Ridge"
+            android:textColor="#fff" />
+    </RelativeLayout>
 
-        </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
-
-</android.support.design.widget.CoordinatorLayout>
+</android.support.v7.widget.CardView>
