--- a/Burpple/app/src/main/res/values/styles.xml
+++ b/Burpple/app/src/main/res/values/styles.xml
@@ -25,4 +25,12 @@
         <item name="android:shadowRadius">2</item>
     </style>
 
+    <style name="accent_button">
+        <item name="android:background">@color/accent</item>
+        <item name="android:paddingLeft">@dimen/margin_large</item>
+        <item name="android:paddingRight">@dimen/margin_large</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+
+
 </resources>
