--- a/Burpple/app/src/main/res/layout/fragment_login.xml
+++ b/Burpple/app/src/main/res/layout/fragment_login.xml
@@ -6,24 +6,23 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_medium_2"
         android:text="Login Form"
-        android:gravity="center"
-        android:layout_margin="@dimen/margin_large"
         android:textColor="@color/primary"
-        android:textSize="@dimen/text_regular_3x"
-        android:textStyle="bold"
-        />
+        android:textSize="@dimen/text_big_2x"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/iv_login_user"
         android:layout_width="95dp"
         android:layout_height="95dp"
-        android:layout_marginLeft="140dp"
-        android:src="@drawable/user_profile"
         android:layout_below="@id/title"
-        />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_medium_2"
+        android:src="@drawable/user_profile" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_email_or_phone"
@@ -31,8 +30,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/iv_login_user"
         android:layout_marginLeft="36dp"
-        android:layout_marginTop="52dp"
         android:layout_marginRight="36dp"
+        android:layout_marginTop="@dimen/margin_large"
         android:textColorHint="@color/primary">
 
         <EditText
@@ -41,7 +40,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/lbl_mobile_or_email"
             android:textColorHint="@color/primary"
-            />
+            android:textSize="@dimen/text_regular_3x" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -49,10 +48,10 @@
         android:id="@+id/input_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/input_email_or_phone"
         android:layout_marginLeft="36dp"
         android:layout_marginRight="36dp"
-        android:layout_below="@+id/input_email_or_phone"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/margin_medium_3"
         android:textColorHint="@color/primary">
 
         <EditText
@@ -60,9 +59,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/lbl_password"
-            android:textColorHint="@color/primary"
             android:inputType="textPassword"
-            />
+            android:textColorHint="@color/primary"
+            android:textSize="@dimen/text_regular_3x" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -70,33 +69,32 @@
         android:id="@+id/fl_remember_me"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/input_password"
         android:layout_alignLeft="@id/input_password"
         android:layout_alignRight="@id/input_password"
+        android:layout_below="@id/input_password"
         android:layout_marginTop="28dp">
 
         <CheckBox
             android:id="@+id/cb_remember_me"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/lbl_remember_me"
-            android:textColor="@color/full_white"
-            android:textSize="@dimen/text_regular"
             android:layout_marginLeft="-8dp"
             android:foreground="@drawable/ripple_primary"
-            />
+            android:text="@string/lbl_remember_me"
+            android:textColor="@color/full_white"
+            android:textSize="@dimen/text_regular_2x" />
 
         <TextView
             android:id="@+id/btn_forget_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/lbl_forgot_password"
             android:layout_gravity="right|top"
-            android:textColor="@color/primary"
             android:clickable="true"
-            android:padding="8dp"
             android:foreground="@drawable/ripple_primary"
-            />
+            android:padding="8dp"
+            android:text="@string/lbl_forgot_password"
+            android:textColor="@color/primary"
+            android:textSize="@dimen/text_regular_2x" />
 
     </FrameLayout>
 
@@ -104,84 +102,81 @@
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
         android:layout_below="@+id/fl_remember_me"
         android:layout_marginLeft="36dp"
         android:layout_marginRight="36dp"
         android:layout_marginTop="8dp"
         android:background="@color/primary"
-        android:textColor="@color/full_white"
-        android:textAllCaps="false"
         android:foreground="@drawable/ripple_white"
-        />
+        android:text="Login"
+        android:textAllCaps="false"
+        android:textColor="@color/full_white"
+        android:textSize="@dimen/text_regular_3x" />
 
     <TextView
         android:id="@+id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/new_account"
-        android:layout_below="@id/btn_login"
         android:layout_alignLeft="@id/btn_login"
         android:layout_alignRight="@id/btn_login"
+        android:layout_below="@id/btn_login"
         android:layout_marginTop="24dp"
-        android:gravity="center"
-        android:textColor="@color/primary"
-        android:foreground="@drawable/ripple_primary"
         android:clickable="true"
+        android:foreground="@drawable/ripple_primary"
+        android:gravity="center"
         android:padding="4dp"
-        />
+        android:text="@string/new_account"
+        android:textColor="@color/primary"
+        android:textSize="@dimen/text_regular_2x" />
 
     <TextView
         android:id="@+id/tv_or"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/lbl_or"
-        android:layout_below="@id/btn_register"
         android:layout_alignLeft="@id/btn_register"
         android:layout_alignRight="@id/btn_register"
+        android:layout_below="@id/btn_register"
         android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:textColor="@color/primary"
         android:clickable="true"
+        android:gravity="center"
         android:padding="4dp"
-        />
+        android:text="@string/lbl_or"
+        android:textColor="@color/primary"
+        android:textSize="@dimen/text_regular_2x" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_or"
-        android:orientation="horizontal"
-        android:layout_marginTop="8dp"
-        android:padding="4dp"
         android:layout_alignLeft="@id/btn_register"
         android:layout_alignRight="@id/btn_register"
-        android:gravity="center">
+        android:layout_below="@id/tv_or"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="4dp">
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/facebook"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_gravity="center"
             android:foreground="@drawable/ripple_white"
-            />
+            android:src="@drawable/facebook" />
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/twitter"
-            android:layout_gravity="center"
-            android:layout_marginLeft="8dp"
-            android:foreground="@drawable/ripple_white"
-            />
-
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:src="@drawable/googleplus"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_gravity="center"
             android:layout_marginLeft="8dp"
             android:foreground="@drawable/ripple_white"
-            />
+            android:src="@drawable/twitter" />
+
+        <ImageView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:foreground="@drawable/ripple_white"
+            android:src="@drawable/googleplus" />
 
     </LinearLayout>
 
