--- a/Burpple/app/src/main/res/layout/view_pod_account_con.xml
+++ b/Burpple/app/src/main/res/layout/view_pod_account_con.xml
@@ -4,11 +4,11 @@
     android:layout_height="@dimen/user_profile_view_pod_height">
 
 
-    <include
-        android:id="@+id/vp_login_user"
-        layout="@layout/view_pod_login_user"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <!--<include-->
+        <!--android:id="@+id/vp_login_user"-->
+        <!--layout="@layout/view_pod_login_user"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
 
     <include
         android:id="@+id/vp_before_login_user"
